--- a/README
+++ b/README
@@ -19,25 +19,32 @@ The suite is built/installed in the conventional manner :-
 The public classes are :-
 
 
-	Tk:CheckBox -   A radio button style widget that uses a
+	Tk::CheckBox -   A radio button style widget that uses a
                     check mark in a box. Useful as a boolean field.
 
-	Tk:Columns	-   A multicolumn list widget with resizeable borders
+	Tk::Columns	-   A multicolumn list widget with resizeable borders
                     and sorting by column.
 
-	Tk:ComboEntry - A Drop down listbox + entry widget with nice keyboard
+	Tk::ComboEntry - A Drop down listbox + entry widget with nice keyboard
                     equivalent behaviour
 
-	Tk:IconCanvas - A canvas implementing a moveable iconic interface.
+	Tk::IconCanvas - A canvas implementing a moveable iconic interface.
                     Allows attaching menus to icons and to background.
 
-	Tk:SplitFrame - A sliding separator for two child widgets. Allows either
+	Tk::SplitFrame - A sliding separator for two child widgets. Allows either
                     horizontal or vertical separation between the two widgets.
                     Can work in concert as horizontal inside vertical or
                     vice-versa.
 
-	Tk:TabFrame   - A tabbed frame geometry manager (like NoteBook).
+	Tk::TabFrame   - A tabbed frame geometry manager (like NoteBook).
 
+    Tk::DockingGroup - A dockable widget management widget hierarchy. This
+                       widget set only works properly on Win32. I've gotten
+                       most of the functionality on Linux under KDE to work
+                       but the docking stuff is still screwy. Any help here
+                       would be appreciated.
+
+    Tk::CornerBox - A textured window resizing widget (like in Win95)
 
     ################################################################
     # I consider the following widgets ready for use but having    #
@@ -49,13 +56,18 @@ The public classes are :-
                      as entry fields. Each field widget is given a 'set'
                      and a 'get' method to provide widget independent
                      methods of maintaining and querying data. The form
-				     will pass back a hash of all field values on request.
+		     will pass back a hash of all field values on request.
 
 	Tk::TableEdit  - A compound widget built from the TabbedForm, SplitFrame,
                      and Column widgets. It implements a simplified interface
                      to a flat file database. Try out the demo.
 
 	Tk::Menustrip  - My own menu bar. Nothing special, though.
+
+	Tk::Signals    - A publish and subscribe object signalling method like
+			 that found in QT. Very useful when widgets that are not
+			 in the same hierarchy need to alert each other to various
+			 application level events.
 
 The private classes are :-
 
